# proof-forge

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: groth16.rs  lib.rs  points.rs  triple.rs
crates/input-arkworks/: Cargo.toml
crates/input-arkworks/src/groth16/: mod.rs  proof.rs  public.rs  verifying_key.rs
crates/input-gnark/: Cargo.toml
crates/input-gnark/src/: lib.rs  utils.rs
crates/input-gnark/src/curve/: bn254.rs  mod.rs  scalar.rs
crates/input-gnark/src/groth16/: mod.rs  proof.rs  public.rs  verifying_key.rs
crates/input-snarkjs/: Cargo.toml
crates/input-snarkjs/src/: handle.rs  lib.rs
crates/input-snarkjs/src/groth16/: mod.rs  proof.rs  public.rs  verification_key.rs  verifying_key.rs
crates/input-snarkjs/testdata/: proof.json  verification_key.json
crates/output-evm/: Cargo.toml
crates/output-evm/src/groth16/: mod.rs  proof.rs  public_inputs.rs  verifying_key.rs
crates/output-evm/src/groth16/exporter/: build_linear.rs  build_validate.rs  build_vkey.rs  mod.rs  verifier.sol.template
crates/output-solidity/: Cargo.toml
crates/output-solidity/src/groth16/: build_calldata.rs  build_linear.rs  build_validate.rs  build_vkey.rs  mod.rs  proof.rs  verifier.sol.template
crates/output-solidity/src/groth16/exporter/: mod.rs
crates/output-solidity/testdata/: verifying_key.json
crates/output-sui/: Cargo.toml
crates/output-sui/src/: lib.rs
crates/output-sui/src/groth16/: builder.rs  exporter.rs  mod.rs
forgeproof/: Cargo.toml
forgeproof/src/: main.rs
forgeproof/src/commands/: calldata.rs  export.rs  forge.rs  mod.rs  target.rs
forgeproof/src/exporter/: groth16_arkworks_bn254_sui.rs  groth16_gnark_bn254_evm.rs  groth16_gnark_bn254_sui.rs  groth16_snarkjs_bn254_evm.rs  groth16_snarkjs_bn254_sui.rs  mod.rs
forgeproof/src/forge/: groth16_arkworks_bn254_evm.rs  groth16_arkworks_bn254_sui.rs  groth16_gnark_bn254_evm.rs  groth16_gnark_bn254_sui.rs  groth16_snarkjs_bn254_evm.rs  groth16_snarkjs_bn254_sui.rs  mod.rs
scripts/: example.json  gen_solidity.py
solidity/src/: Groth16Verifier.sol
