[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/input-snarkjs",
    "crates/output-evm",
    "forgeproof",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
alloy-primitives = "0.8.21"

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.105"

anyhow = "1.0.95"

proof-forge-core = { path = "crates/core" }
proof-forge-input-snarkjs = { path = "crates/input-snarkjs" }
proof-forge-output-evm = { path = "crates/output-evm" }
clap = { version = "4.5.18", features = ["derive"] }

regex = "1.11.1"

hex = "0.4.3"
