[package]
name = "forgeproof"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }

anyhow = { workspace = true }

hex = { workspace = true }

proof-forge-core = { workspace = true }

proof-forge-input-snarkjs = { workspace = true }
proof-forge-input-gnark = { workspace = true }
proof-forge-input-arkworks = { workspace = true }

proof-forge-output-evm = { workspace = true }
proof-forge-output-sui = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }
