[package]
name = "proof-forge-core"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }

ark-ff = { workspace = true, optional = true }
ark-bn254 = { workspace = true, optional = true }

[features]
default = []
arkworks = ["ark-bn254", "ark-ff"]
