[package]
name = "proof-forge-input-arkworks"
version.workspace = true
edition.workspace = true

[dependencies]
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }
ark-groth16 = { workspace = true }

anyhow = { workspace = true }

proof-forge-core = { workspace = true, features = ["arkworks"] }
